Organize the rc file.

--- a/samurai-ide-web.rc
+++ b/samurai-ide-web.rc
@@ -1,11 +1,13 @@
 webName="samurai-ide"
 REPO_NAME="samurai-ide-web"
+Description="Samurai-IDE Website on Python DJANGO"
+me="$REPO_NAME/install.sh"
+SERVICE_NAME="$REPO_NAME"
 envName="$REPO_NAME"
 websDst="/var/www"
 REPO_USER=poikilos
 REPO_URL="https://github.com/$REPO_USER/$REPO_NAME"
 myPath="`realpath $0`"
-me="samurai-ide-web/install.sh"
 if [ "@$WEB_USER" = "@" ]; then
     WEB_USER="samurai-ide"
     echo "* WEB_USER was not set so it has reverted to the default: $WEB_USER"
@@ -20,7 +22,6 @@ VENV_DIR="$VENVS_DIR/$envName"
 # deluser $WEB_USER
 REPO_PATH="$WEB_USER_HOME/$REPO_NAME"
 PYTHON3="$VENV_DIR/bin/python"
-serverStarter="$WEB_USER_HOME/ninja-ide-web-start"
-serverService="$WEB_USER_HOME/ninja-ide-web.service"
-Documentation="https://github.com/poikilos/samurai-ide-web"
-Description="Samurai-IDE Website on Python DJANGO"
+serverStarter="$WEB_USER_HOME/$SERVICE_NAME-start"
+serverService="$WEB_USER_HOME/$SERVICE_NAME.service"
+Documentation="https://github.com/$REPO_USER/$REPO_NAME"
