Move Node requirements further down since they are for a later development stage of the mezzanine 5 rewrite. Stop supporting Python 2 and stop the ninja site's setup steps.

--- a/samurai-ide-web.rc
+++ b/samurai-ide-web.rc
@@ -70,7 +70,7 @@ if [ $? -ne 0 ]; then
         echo "OK"
     fi
 else
-    echo "  * The user already exists and will be used."
+    echo "  * The WWW_USER named $WWW_USER already exists and will be used."
 fi
 
 if [ "@$WEB_USER_GROUP" = "@" ]; then
