--- a/samurai-ide-web.rc
+++ b/samurai-ide-web.rc
@@ -53,6 +53,12 @@ fi
 #     echo "* WWW_USER was not set so it has reverted to the default: $WWW_USER"
 # fi
 WWW_USER=$USER
+# WWW_EFFECTIVE_GROUP_ID=`id $USER -g`
+# -g: get only the effective group of the user
+if [ "@$WWW_GROUP" = "@" ]; then
+    WWW_GROUP=`id $USER -g -n`
+fi
+# -n: get a name
 # if [ "@$WEB_USER_HOME" = "@" ]; then
 #     WEB_USER_HOME="$websDst/$webName"
 #     echo "* WEB_USER_HOME was not set so it has reverted to the default: $WEB_USER_HOME"
